samples/_failures_safe/1761499514_8122e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2124a7d1.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
